Fix closing tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <p>If you are not redirected automatically, click on
         <a href="http://github.com/dburic/">http://github.com/dburic/</a>
-        to go to my GitHub account.<p>
+        to go to my GitHub account.</p>
     </body>
 </html>
